# potbot

./: CMakeLists.txt  README.md  package.xml
cfg/: Controller.cfg  Localization.cfg  PathPlanning.cfg
include/autonomous_mobile_robot_2022/: Localization.h  PointCloud.h  PotentialMethod.h  classification.h  convCamData.h  frameRateManagement.h  imageMatching.h  measurementVelocity.h  rviz.h  synchroImage.h  tf.h  velocityEstimation.h
include/potbot/: Controller.h  Filter.h  Localization.h  PathPlanning.h  PointCloud.h  PotentialMethod.h  RobotControl.h  Utility.h  classification.h  convCamData.h  frameRateManagement.h  imageMatching.h  measurementVelocity.h  rviz.h  synchroImage.h  test.h  velocityEstimation.h
launch/: Controller.launch  Filter.launch  Localization.launch  PathPlanning.launch  PotentialMethod.launch  RobotControl.launch  beego.launch  boot.launch  boot1.launch  boot2.launch  classification.launch  detection.launch  exp_SensorAccuracy.launch  gazebo.launch  imageMatching.launch  lrfCamera.launch  measurementVelocity.launch  megarover.launch  robot_0.launch  robot_1.launch  rviz.launch  synchroImageManage.launch  test.launch  velocityEstimation.launch  vmegarover_move_base_dwa.launch  vmegarover_with_obstacle.launch
launch/StereoCamera/: classification.launch  detection.launch  imageMatching.launch  lrfCamera.launch  measurementVelocity.launch  synchroImageManage.launch  velocityEstimation.launch
launch/gazebo/: 20231019.launch  gazebo.launch  multi_robot.launch  spawn_turtlebot3.launch  spawn_vmegarover.launch  turtlebot3_with_tdu.launch  vmegarover_move_base_dwa.launch  vmegarover_with_obstacle.launch  vmegarover_with_tdu.launch
maps/: TDU_0113_0.yaml  patern1.yaml
msg/: BridgeImageData.msg  ClassificationData.msg  ClassificationElement.msg  ClassificationVelocityData.msg  ClusterData.msg  ImageFlow2D.msg  ImageMatchingData.msg  MaskImageData.msg  OdometryArray.msg  PointCloudData.msg  SensorMapData.msg  State.msg  StateArray.msg  beego_encoder.msg  synchronizedImage.msg
path/: eight_1.csv  path1.csv  path_test_1.csv  path_test_3.csv  sin.csv
potbot/: CMakeLists.txt  package.xml
potbot/launch/: amcl.launch  demo.launch  gmapping_megarover.launch  megarover.launch  megarover_act_amcl.launch  megarover_act_sensor.launch  megarover_amcl.launch  megarover_gmapping.launch  potbot_beego.launch  potbot_beego_act.launch  potbot_megarover.launch  potbot_megarover_act.launch  potbot_remote.launch  robot_0.launch  robot_1.launch  robot_localization.launch  tb_remote.launch  test.launch
potbot/launch/env/: amcl.launch  potbot.launch  potbot__.launch
potbot/launch/gazebo/: 20231019.launch  beego_with_empty.launch  megarover_with_TDU.launch  megarover_with_empty.launch  multi_robot.launch  spawn_robot.launch  spawn_vmegarover.launch  test2.launch  turtlebot3_with_tdu.launch  turtlebot3_with_willowgarage.launch  vmegarover_move_base_dwa.launch  vmegarover_with_obstacle.launch  vmegarover_with_tdu.launch
potbot/launch/gazebo/spawn_model/: spawn_turtlebot3.launch
potbot_controller/: CMakeLists.txt  package.xml
potbot_controller/cfg/: Controller.cfg
potbot_controller/include/potbot_controller/: Controller.h
potbot_controller/launch/: Controller.launch
potbot_controller/src/: Controller.cpp  callback.cpp  constructor.cpp  controller.cpp  debug_main.cpp  methods.cpp  node.cpp  property.cpp
potbot_description/: CMakeLists.txt  package.xml
potbot_description/config/: gmapping_megarover.yaml  megarover_actual_robot_localization.yaml  megarover_robot_localization.yaml  waffle_pi_robot_localization.yaml
potbot_description/maps/: lab5.yaml  lab9.yaml
potbot_description/path/: -sin.csv  eight_0.csv  path_test_0.csv  path_test_2.csv  route_robo_1.csv  route_robo_2.csv  straight.csv
potbot_filter/: CMakeLists.txt  package.xml
potbot_filter/cfg/: Clustering.cfg  Filter.cfg
potbot_filter/include/potbot_filter/: 2dscan_clustering.h  Filter.h
potbot_filter/launch/: Filter.launch
potbot_filter/src/: 2dscan_clustering.cpp  2dscan_clustering_node.cpp  callback.cpp  constructor.cpp  debug_main.cpp  methods.cpp  property.cpp  state_estimation.cpp  state_estimation_node.cpp
potbot_lib/: CMakeLists.txt  package.xml
potbot_lib/include/potbot_lib/: DiffDriveController.h  PathPlanner.h  PotentialField.h  ScanClustering.h  Utility.h
potbot_lib/src/: DiffDriveController.cpp  PathPlanner.cpp  PotentialField.cpp  ScanClustering.cpp  Utility.cpp  utility.cpp
potbot_localization/: CMakeLists.txt  package.xml
potbot_localization/cfg/: Localization.cfg
potbot_localization/include/potbot_localization/: Localization.h
potbot_localization/launch/: Localization.launch
potbot_localization/src/: callback.cpp  constructor.cpp  debug_main.cpp  map_link.cpp  methods.cpp  property.cpp  twist_to_odometry.cpp
potbot_localmap/: CMakeLists.txt  package.xml
potbot_msgs/: CMakeLists.txt
potbot_msgs/cfg/: Clustering.cfg  Controller.cfg  Localization.cfg  PathPlanning.cfg
potbot_msgs/msg/: Obstacle.msg  PotentialValue.msg  beego_encoder.msg  vel.msg
potbot_navigation/: CMakeLists.txt  package.xml
potbot_navigation/launch/: navigation.launch
potbot_navigation/src/: node.cpp
potbot_pathplanner/: CMakeLists.txt  package.xml
potbot_pathplanner/cfg/: PathPlanning.cfg
potbot_pathplanner/include/potbot_pathplanner/: LocalPathPlanner.h  PathPlanning.h
potbot_pathplanner/launch/: PathPlanning.launch
potbot_pathplanner/src/: LocalPathPlanner.cpp  callback.cpp  constructor.cpp  debug_main.cpp  methods.cpp  node.cpp  pathplanner.cpp  property.cpp
potbot_pathplannig/: CMakeLists.txt  package.xml
potbot_pcl/: CMakeLists.txt  package.xml
potbot_pcl/cfg/: ClusteringParam.cfg
potbot_pcl/include/potbot_pcl/: Clustering3D.h
potbot_pcl/launch/: PCLClustering.launch  test.launch  test2.launch
potbot_pcl/src/: callback.cpp  constructor.cpp  debug_main.cpp  main.cpp  main_2.cpp  methods.cpp  pcl_fig.cpp  pcl_method.cpp  pcl_node.cpp  property.cpp  tutorial.cpp
potbot_rviz/: CMakeLists.txt  package.xml
rviz/: Localization.rviz
yaml/: potbot.yaml
(+168 files in other folders)
