<?xml version="1.0"?>
<package format="2">
  <name>potbot</name>
  <version>0.0.1</version>
  <description>The potbot package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/potbot</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>potbot_pathplannig</exec_depend>
  <export><metapackage/></export>
</package>

