<?xml version="1.0"?>
<package format="2">
  <name>potbot</name>
  <version>0.0.0</version>
  <description>The potbot package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <build_depend>potbot_lib</build_depend>
  <build_depend>potbot_msgs</build_depend>
  <build_depend>potbot_localization</build_depend>
  <build_depend>potbot_pathplanner</build_depend>
  <build_depend>potbot_controller</build_depend>
  <build_depend>potbot_filter</build_depend>
  <build_depend>potbot_pcl</build_depend>
  <build_depend>potbot_description</build_depend>
  <build_depend>potbot_rviz</build_depend>
</package>
