<?xml version="1.0"?>
<package format="2">
  <name>potbot_localization</name>
  <version>0.0.0</version>
  <description>The potbot_localization package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>potbot_lib</build_depend> -->
  <!-- <build_export_depend>potbot_lib</build_export_depend> -->
</package>
